fixing issue where bg texture doesn't show on ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,11 +18,11 @@ body {
 }
 .bg-texture {
   content: "";
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   opacity: 0.2;
   object-fit: cover;
   z-index: -1;
